@@ -1,3 +1,8 @@
+2009-02-21 Matěj Týč <bubla@users.sf.net>
+	* docs/Makefile.am,docs/Devil_manual.texi: Added new ILU images to the
+	manual, set the manual license to GFDL.
+	* testil, ilur: Licensed under GPL v3
+
 2009-02-19 Denton Woods <doomwiz@users.sf.net>
 	* windows_example\resources: Added DevIL Logo.ico, removed OpenIL Logo.ico.
 	* windows_example\resource.h: Changed to use DevIL Logo.ico.
